--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title> Travel </title>
-    <link rel="stylesheet" type="text/css" href="travel.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <header>
   <body>
